# core1_panel_detector

./: README.md
core1_panel_detector/: CMakeLists.txt  package.xml
core1_panel_detector/example/: core1_panel_detector_example.cpp
core1_panel_detector/include/core1_panel_detector/: coco_names.hpp  panel_detector_hsv.hpp
core1_panel_detector/src/: panel_detector_hsv.cpp
core1_panel_detector_plugin/: CMakeLists.txt  README.md  core1_panel_detector_plugin.xml  package.xml
core1_panel_detector_plugin/include/core1_panel_detector_plugin/: panel_detector_hsv.hpp
core1_panel_detector_plugin/src/: panel_detector_hsv.cpp
py/: example.py
